--- a/src/components/common/MediaObject/MediaObject.module.css
+++ b/src/components/common/MediaObject/MediaObject.module.css
@@ -1,3 +1,7 @@
 .picture {
     max-width: 250px;
 }
+
+.textDescription {
+    text-align: justify;
+}
