--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,3 +1,5 @@
 .mainContainer{
     margin-top: 5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
